versioned_docs/version-2026.1.1/professor/franciele_fernandes_baliero.mdx
---
sidebar_label: 'Franciele Fernandes Baliero'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Franciele Fernandes Baliero",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Educação Física I - 2539",
          "size": 2,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "quadra_de_esportes_-_biopark",
          "students": [
            "IIW2026B"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Educação Física II - 2540",
          "size": 2,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "quadra_de_esportes_-_biopark",
          "students": [
            "IIW2025B"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Educação Física 3 - 203",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "EIN2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Educação Física I - 2577",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "MEC2026"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Educação Física 2 - 170",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "EIN2025"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Educação Física I - 2577",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "MEC2026"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "EDUCAÇÃO FÍSICA I (544)",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "EDUCAÇÃO FÍSICA II (540)",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024B-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "EDUCAÇÃO FÍSICA I (544)",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "EDUCAÇÃO FÍSICA II (540)",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024B-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Franciele Fernandes Baliero

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

